# SwarmX

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  install.sh  package-lock.json  package.json  pocketpaw-analysis-report.md  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
.swarmx/sessions/: a1-597fc2-1771633276928.json  a1-5b39b1-1771631049685.json  a1-9c0273-1771632052128.json  a1-bc00c2-1771630733669.json  a1-cef8c3-1771629008299.json  a1-feea36-1771629528840.json  a2-0c2f94-1771633276929.json  a2-0f4e75-1771629528841.json  a2-4fb27a-1771631049686.json  a2-6f8a50-1771632052128.json  a2-bcdc4a-1771630733670.json  a2-d967b0-1771629008300.json  agent1-05fd89-1771629528331.json  agent1-143e2c-1771629528325.json  agent1-1c4abf-1771631049086.json  agent1-3b4736-1771632051598.json  agent1-5c6441-1771629007792.json  agent1-5dee82-1771632051608.json  agent1-71b1ae-1771630733149.json  agent1-93cbec-1771633276390.json  agent1-b261e5-1771633276402.json  agent1-e00539-1771629007787.json  (+38 more)
docs/: README.md  channels.md  guardrails.md  installation.md  providers.md  quickstart.md  tracing.md  workflows.md
examples/: basic-agents.ts  guardrails.ts  link-understanding.ts  multi_provider.yaml  programmatic-usage.ts  programmatic_usage.py  research-workflow.ts  research_team.yaml  workflow-dag.ts
src/: index.ts
src/cli/: main.ts
swarmx/: __init__.py
tests/: __init__.py  agent-engine.test.ts  core-modules.test.ts  event-bus.test.ts  guardrails-compaction-tracing.test.ts  link-understanding.test.ts  production.test.ts  provider-registry.test.ts  scheduler.test.ts  test_agent_engine.py  test_config.py  test_event_bus.py  test_scheduler.py  workflow.test.ts
(+75 files in other folders)
